--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@types/lodash": "^4.14.110",
+    "angularfire2": "^5.0.0-rc.11",
     "core-js": "^2.5.4",
+    "firebase": "^5.2.0",
     "lodash": "^4.17.10",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
